<resources>
    <string name="app_name">Twitly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logincaps">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here_click_here_to_register">New here? Click here to register!</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT</string>
    <string name="name">Name</string>
    <string name="set_username">Set Username</string>
    <string name="set_password">Set Password</string>
    <string name="registercaps">REGISTER</string>
    <string name="after_registering_a_verification_link_will_be_sent_to_your_email_address">After registering, a verification link will be sent to your email address</string>
    <string name="already_have_an_account_click_here_to_login">Already have an account? Click here to login</string>
    <string name="big_dot">•</string>
    <string name="home">Home</string>
    <string name="log_in">Log in</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="banner">Introduce yourself to the world right now!</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="after_clicking_the_above_button_a_link_to_reset_your_password_will_be_sent_to_the_provided_email_address">After clicking the above button, a link to reset your password will be sent to the provided email address</string>
    <string name="login_to_twitly">LOGIN TO TWITLY</string>
    <string name="post">POST</string>
    <string name="what_s_happening">What\'s happening?</string>
    <string name="login_to_twitly2">Login to Twitly</string>
    <string name="create_a_new_twitly_account">Create a new Twitly account</string>
    <string name="dots">…</string>
    <string name="explore">Explore</string>
    <string name="_300">300</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="follow">Follow</string>
    <string name="search_twitly">Search Twitly</string>
    <string name="comments">Comments</string>
    <string name="comment_here">Comment here…</string>
    <string name="reply">Reply</string>
    <string name="_100">100</string>
    <string name="comment">Comment…</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="delete">Delete</string>
    <string name="remove_profile_picture">Remove Profile Picture</string>
    <string name="post_2">Post</string>
    <string name="likes">Likes</string>
    <string name="maximum_comments_reached">Maximum comments reached!</string>
    <string name="remove">Remove</string>
    <string name="liked_by">Liked By</string>
    <string name="no_one_liked_your_post_sedlyf">No one liked your post #SedLyf</string>
    <string name="no_recent_activities">No recent activities</string>
    <string name="notifications">Notifications</string>
</resources>