<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDefaultBackground3"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_twitly_account"
            android:textSize="@dimen/_28ssp"
            android:includeFontPadding="false"
            android:fontFamily="@font/sf_medium"
            android:textStyle="bold"
            android:textColor="@color/colorText1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_18sdp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/email"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_18sdp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/name"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_18sdp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/set_username"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:passwordToggleEnabled="true"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/set_password"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:text="@string/registercaps"
            android:backgroundTint="@color/accent_blue"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:elevation="@dimen/_8sdp"
            app:elevation="@dimen/_8sdp"
            app:cornerRadius="@dimen/_75sdp"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:text="@string/after_registering_a_verification_link_will_be_sent_to_your_email_address"
            android:textSize="@dimen/_11ssp"
            android:gravity="center"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/register_txtBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_click_here_to_login"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_16sdp"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>