<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorDefaultBackground3"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_twitly2"
            android:textSize="@dimen/_28ssp"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:textColor="@color/colorText1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_18sdp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/email"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:passwordToggleEnabled="true"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/password"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:text="@string/logincaps"
            android:backgroundTint="@color/accent_blue"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:elevation="@dimen/_8sdp"
            app:elevation="@dimen/_8sdp"
            app:cornerRadius="@dimen/_75sdp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/login_txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/forgot_password"
            android:textSize="@dimen/_11ssp"
            android:gravity="center"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/login_txtBackToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_here_click_here_to_register"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_16sdp"
            android:foreground="?android:attr/selectableItemBackground"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>