<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorDefaultBackground3"
    tools:context=".Activities.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="35sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/sf_medium"
            android:textStyle="bold"
            android:textColor="@color/colorText1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="40dp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/resetP_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetP_btnReset"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/reset"
            android:backgroundTint="@color/accent_blue"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_medium"
            android:elevation="4dp"
            android:includeFontPadding="false"
            app:elevation="8dp"
            app:cornerRadius="75dp"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/after_clicking_the_above_button_a_link_to_reset_your_password_will_be_sent_to_the_provided_email_address"
            android:textSize="15sp"
            android:gravity="center"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"/>

    </LinearLayout>

</LinearLayout>